[package]
name = "mng_to_pngs"
version = "0.0.0"
edition = "2021"
authors = ["John Lyon-Smith <john@lyon-smith.org>"]
description = "Extracts PNG files from an MNG file"
repository = "https://github.com/jlyonsmith/mng_to_pngs"
readme = "README.md"
keywords = []
categories = []
license = "Unlicense"
links = "libmng"

[dependencies]
clap = { version = "4.0.7", features = ["derive"] }
colored = "^2.0.0"
easy-error = "1.0.0"
lazy_static = "1.4.0"
libc = "0.2.139"
libz-sys = "1.1.8"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "mng-to-pngs"
path = "src/bin/mng_to_pngs.rs"
